  * pg_createcluster: Default to cluster owner 'postgres' if no owner is
    specified.
  * pg_ctlcluster: Fix pg_controldata output parsing and call pg_controldata
    under locale 'C' to work with all locales. Closes: #310716
  * pg_createcluster: Added --socket-dir option.
  * PgCommon.pm: Fix declaration of @lines in set_conf_value() to avoid
    duplicating the lines in configuration files.

 -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 14:38:31 +0200

postgresql-common (10) experimental; urgency=low

  * pg_ctlcluster: Supply cluster socket directory to pg_autovacuum.

 -- Martin Pitt <mpitt@debian.org>  Tue, 24 May 2005 22:57:33 +0200

postgresql-common (9) experimental; urgency=low

  * Add README.Debian with some general introduction, "first steps for the
    impatient", and pointers to further documentation.
  * pg_ctlcluster: Check validity of postmaster locale before setting it.
  * pg_createcluster: Check validity of locale before calling initdb under it.
  * pg_wrapper: Support PGCLUSTER environment variable. Closes: #305912
  * pg_upgradecluster:
    - Copy original configuration files.
    - Configure the target cluster to use the original port, move the old
      cluster to a previously unused port.
    - Start the new cluster after upgrade.
  * debian/init.d-functions: Create /var/run/postgresql if it does not exist.
  * pg_createcluster: Set the socket directory to /var/run/postgresql for
    postgres-owned clusters. Print a warning to change the directory for other
    owners. Closes: #308597
  * pg_wrapper: If PGHOST is not defined, set it to the cluster's socket
    directory to make client programs work with non-default socket
    directories.

 -- Martin Pitt <mpitt@debian.org>  Sun, 22 May 2005 22:22:38 +0200

postgresql-common (8) experimental; urgency=low

  * pg_ctlcluster: Check whether owner is in the shadow group, and keep shadow
    group privilege in this case; this is a poor workaround for Perl's lack of