@@ -12,8 +12,9 @@ postgresql-common (11) experimental; urgency=low
   * pg_createcluster: Added --socket-dir option.
   * PgCommon.pm: Fix declaration of @lines in set_conf_value() to avoid
     duplicating the lines in configuration files.
+  * PgCommon.pm: Converted to use strict to avoid future errors.
 
- -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 14:38:31 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sat, 28 May 2005 14:57:01 +0200
 
 postgresql-common (10) experimental; urgency=low
 
